refactor class JsonCityNamesReaderUtil and class CityDatabase